# Product_of_Four

./: .gitignore  .~lock.pairs_resultant_sqrts_with_factors.ods#  Cargo.toml  ProductOfFour.odt  ProductOfFourConjecture.odt  ProductOfFour_json.txt  Product_of_Four.md  README.md  _100KPrimes.txt
src/: CalculateSigma2.py  MergePairs2IntoOddOnlyResults.py  Sigma2MatchesCountMod10.py  main.rs  productoffour_ddl.sql
