[package]
name = "Product_of_Four"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = {version = "0.6", features=["postgres","runtime-tokio-rustls"]}
tokio = { version = "1", features = ["full"]}
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
futures = "0.3"

[lints.rust]
non_snake_case = {level = "allow"}
