[package]
name = "Product_of_Four"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4"
num-bigint = "0.4"
sqlx = {version = "0.8", features=["postgres","runtime-tokio-rustls","bigdecimal"]}
tokio = { version = "1", features = ["full"]}
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
futures = "0.3"
num-traits = "0.2"
async-trait = "0.1"

[lints.rust]
non_snake_case = {level = "allow"}
